--- a/app/assets/style/all.scss
+++ b/app/assets/style/all.scss
@@ -3,5 +3,9 @@
 
 @import "header@media992";
 @import "footer@media992";
-@import "main@media992";
+@import "index@media992";
+@import "system@media992";
+@import "qa@media992";
+
+@import "page-box";
 
