--- a/app/assets/style/_header@media992.scss
+++ b/app/assets/style/_header@media992.scss
@@ -1,26 +1,7 @@
 /*header*/
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 30px 88px;
-  background-color: $cAA0601;
-  img {
-    width: 80px;
-    height: 49px;
-  }
-  ul {
-    display: flex;
-    align-items: center;
-  }
-  li a {
-    display: block;
-    margin: 0 32px;
-    font: normal normal normal Noto Sans;
-    font-size: 20px;
-    line-height: 30px;
-    color: $cfff;
-    text-decoration: none;
+@media all and (max-width: 992px) {
+  .header {
+    padding: 30px 39px;
   }
 }
 /*header end*/
