--- a/app/assets/style/_index@media992.scss
+++ b/app/assets/style/_index@media992.scss
@@ -143,7 +143,43 @@
       }
     }
 
+    // main-form-box
+    &-form-box {
+      &-w{
+        max-width: 450px;
+      }
 
+      &-title {
+        margin-bottom: 16px;
+        font-size: 32px;
+        line-height: 48px;
+      }
+
+      &-subtitle {
+        font-size: 16px;
+        line-height: 24px;
+      }
+
+      form .form-input-box {
+
+        label {
+          font-size: 14px;
+          line-height: 21px;
+        }
+        input {
+          line-height: 36px;
+        }
+        input, textarea  {
+          font-size: 14px;
+          line-height: 21px;
+        }
+      }
+
+      form .form-btn {
+        width: 210px;
+        height: 36px;
+      }
+    }
 
   }
 }
