--- a/app/assets/style/_index@media992.scss
+++ b/app/assets/style/_index@media992.scss
@@ -103,9 +103,11 @@
         margin: 0 8px 0 30px;
       }
 
-      .text-r-m {
-        margin-right: 0;
-      }
+    }
+
+    .classic-subtitle {
+      font-size: 38px;
+      line-height: 42px;
     }
 
     // main--feat-box
